# billytalk

./: .gitignore  CONTRIBUTING.md  README.md  billytalk.spec  pyproject.toml  requirements.txt
billytalk/: __init__.py  __main__.py
billytalk/core/: __init__.py  __main__.py  autostart.py  crash.py  hotkeys.py  logging_setup.py  services.py  system_events.py  tray.py  ui_language.py  ui_launch.py  wiring.py
billytalk/i18n/: __init__.py  en.py  ru.py
billytalk/ui/: __init__.py  __main__.py  chrome.py  controller.py  overlay.py
docs/adr/: 0001-ui-stack.md  0002-build-fresh-not-fork.md  0003-hosted-tier-on-groq.md  (+3 more)
packaging/: README.md  install.ps1  installer.nsi  make_icon.py  make_installer_art.py  sign.ps1  uninstall-readme.txt  uninstall.ps1
probes/: billytalk_mouse_probe.py  billytalk_taphold_demo.py
spikes/: requirements.txt  s0_smoke.py  s0b_hook.py  s0c_hook_getmsg.py  s1_focus_restore.py  s1b_focus_after_input.py  s1c_focus_real.py  s2_uia_verify.py  s3_s6_combined.py  s5_latency.py  s5b_latency.py  s5c_aimlapi.py  s5d_groq.py  s5e_verify.py  s6b_watchdog.py  s7_background_delivery.py
tests/: conftest.py  test_audio.py  test_autostart.py  test_chrome.py  test_clipboard.py  test_dictionary.py  test_driver.py  test_hooks.py  test_hotkeys.py  test_i18n.py  test_icon.py  test_insert.py  test_ipc.py  test_keycodes.py  test_logging_setup.py  test_machine.py  test_main_smoke.py  test_overlay.py  test_services.py  test_store.py  test_store_ddl.py  test_stt.py  test_system_events.py  test_tray.py  test_ui.py  test_verify.py  test_windows.py  test_wiring.py
(+78 files in other folders)
